--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* TODO: Remove these later, just for the eyes during development */
+  background-color: #202020;
+  color: #ffffff;
 }
 
 code {
