--- a/src/components/GuessRow.module.css
+++ b/src/components/GuessRow.module.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: space-around;
     gap: 1rem;
-    margin-bottom: 1em;
+    margin-top: 1em;
 }
 
 .letterBox {
@@ -14,13 +14,28 @@
     aspect-ratio: 1 / 1;
     font-size: 2.5rem;
     text-transform: uppercase;
+    border: 3px solid hsl(0, 0%, 23%);
 }
-.inputBox {
+.inputBox,
+.gray,
+.green,
+.yellow {
     all:unset;
     width:100%;
     height:100%;
+    border-radius: 5px;
+
+}
+.gray {
+    color: hsl(0, 0%, 25%);
+}
+.green {
+    background-color: rgb(83,141,78) !important;
+}
+.yellow {
+    background-color: rgb(181,159,59) !important;
 }
 input:disabled {
     background: hsl(0, 0%, 8%);
-    border: 3px solid hsl(0, 0%, 23%);
 }
+
