--- a/src/components/GuessButton.css
+++ b/src/components/GuessButton.css
@@ -2,7 +2,7 @@
     display:flex;
 }
 .resetButton{
-    margin: 1em;
+    margin: .5em;
     width: 40%;
     border: 3px solid white;
     border-radius: 5px;
@@ -20,7 +20,7 @@
 }
 .guessButton,
 .clearButton{
-    margin: 1em;
+    margin: .5em;
     width: 40%;
     border: 3px solid white;
     border-radius: 5px;
