--- a/src/components/GuessRow.module.css
+++ b/src/components/GuessRow.module.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    gap: 1rem;
-    margin-top: 1em;
+    gap: .5rem;
+    margin-top: .5em;
 }
 
 .letterBox {
@@ -24,7 +24,6 @@
     width:100%;
     height:100%;
     border-radius: 5px;
-
 }
 .gray {
     color: hsl(0, 0%, 25%);
@@ -38,4 +37,3 @@
 input:disabled {
     background: hsl(0, 0%, 8%);
 }
-
