--- a/src/components/Keyboard.module.css
+++ b/src/components/Keyboard.module.css
@@ -1,9 +1,22 @@
+.keyboardContainer {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
 .keyboard {
-    margin: 0 2rem;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+    margin: 0 auto;
+    /* width: 60%; */
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     justify-content: space-evenly;
-    gap: .5rem;
+    gap: 0.5rem;
+}
+
+.keyboardRow{
+  display: flex;
+  gap: 0.5rem;
 }
 
 .btn {
@@ -11,7 +24,7 @@
     border: 3px solid white;
     border-radius: 5px;
     background: hsl(0, 0%, 23%);
-    aspect-ratio: 1 / 1;
+    aspect-ratio: 2 / 1;
     font-size: 1.5rem;
     text-transform: uppercase;
     padding: .5rem;
