--- a/src/components/Keyboard.module.css
+++ b/src/components/Keyboard.module.css
@@ -25,12 +25,18 @@
   justify-content: space-evenly;
   gap: 0.5rem;
 }
+
 .keyboardMobile .keyboardRow button{
  padding: .3rem;
+ border: 1px solid white;
  font-size: 1.3rem;
  width: 35px;
  height: 50px;
 }
+
+.keyboardMobile .keyboardRow{
+  gap: 0.2rem;
+ }
 
 .keyboardRow{
   display: flex;
