--- a/src/components/Keyboard.module.css
+++ b/src/components/Keyboard.module.css
@@ -44,11 +44,10 @@
 }
 
 .btn {
-    width: 100%;
+    width: 2em;
     border: 3px solid white;
     border-radius: 5px;
     background: hsl(0, 0%, 23%);
-    aspect-ratio: 2 / 1;
     font-size: 1.5rem;
     text-transform: uppercase;
     padding: .5rem;
